style map & forms

--- a/web/themes/custom/alps_trips/templates/form/input.html.twig
+++ b/web/themes/custom/alps_trips/templates/form/input.html.twig
@@ -10,4 +10,7 @@
  * @see template_preprocess_input()
  */
 #}
-<input{{ attributes }} />{{ children }}
+{{ include('@atoms/input.html.twig', {
+  attributes: attributes,
+  children: children,
+}) }}
